Fix footer overlap in user books and book detail

--- a/src/app/components/book/book-detail/book-detail.component.css
+++ b/src/app/components/book/book-detail/book-detail.component.css
@@ -5,6 +5,10 @@ img {
     border-radius: 2%;
 }
 
+.book-info {
+    margin-bottom: 100px;
+}
+
 .book {
     margin-top: 35px;
 }
