--- a/src/app/components/book/user-books/user-books.component.css
+++ b/src/app/components/book/user-books/user-books.component.css
@@ -11,6 +11,10 @@
     margin: 20px;
 }
 
+.book-div {
+    margin-bottom: 100px;
+}
+
 .book-img {
     width: 150px;
     height: 200px;
